# ProjectTemplate

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
app/: CMakeLists.txt
core/: CMakeLists.txt
core/src/: Core.cpp  Core.h
tests/: CMakeLists.txt
tests/src/: HelloTest.cpp
